@@ -24,7 +24,8 @@ PKG_CHECK_MODULES(LIBEPC,    [avahi-client >= 0.6
                               gmodule-2.0  >= 2.0
                               gobject-2.0  >= 2.4
                               gnutls       >= 1.4
-                              libsoup-2.2  >= 2.2])
+                              libsoup-2.2  >= 2.2
+                              uuid         >= 1.36])
 PKG_CHECK_MODULES(LIBEPC_UI, [gtk+-2.0     >= 2.10])
 
 AM_CONDITIONAL([HAVE_AVAHI_UI_0_6_22],
