@@ -1,5 +1,12 @@
 2007-11-28  Mathias Hasselmann  <mathias@openismus.com>
 
+	Use a time based UUID as serial for self-signed certificates.
+
+	* configure.ac: Check for uuid >= 1.36.
+	* libepc/tls.c: Pass UUID to gnutls_x509_crt_set_serial.
+
+2007-11-28  Mathias Hasselmann  <mathias@openismus.com>
+
 	Support dynamic ZeroConf bookmarks.
 
 	* libepc/publisher.c, libepc/publisher.h:
